--- a/BHA.ManagementAssistant.Nutritious/BHA.ManagementAssistant.Nutritious.WebApi.csproj
+++ b/BHA.ManagementAssistant.Nutritious/BHA.ManagementAssistant.Nutritious.WebApi.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BHA.ManagementAssistant.Nutritious.Common\BHA.ManagementAssistant.Nutritious.Common.csproj" />
     <ProjectReference Include="..\BHA.ManagementAssistant.Nutritious.Model\BHA.ManagementAssistant.Nutritious.Model.csproj" />
   </ItemGroup>
 
