--- a/BHA.ManagementAssistant.Nutritious.Model/BHA.ManagementAssistant.Nutritious.Model.csproj
+++ b/BHA.ManagementAssistant.Nutritious.Model/BHA.ManagementAssistant.Nutritious.Model.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Model\ViewModel\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BHA.ManagementAssistant.Nutritious.Core\BHA.ManagementAssistant.Nutritious.Core.csproj" />
+  </ItemGroup>
+
 </Project>
