Create Middleware and User Informatin

--- a/BHA.ManagementAssistant.Nutritious.Common/BHA.ManagementAssistant.Nutritious.Common.csproj
+++ b/BHA.ManagementAssistant.Nutritious.Common/BHA.ManagementAssistant.Nutritious.Common.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BHA.ManagementAssistant.Nutritious.Core\BHA.ManagementAssistant.Nutritious.Core.csproj" />
+    <ProjectReference Include="..\BHA.ManagementAssistant.Nutritious.Model\BHA.ManagementAssistant.Nutritious.Model.csproj" />
+  </ItemGroup>
+
 </Project>
