--- a/BHA.ManagementAssistant.Nutritious.Common/BHA.ManagementAssistant.Nutritious.Common.csproj
+++ b/BHA.ManagementAssistant.Nutritious.Common/BHA.ManagementAssistant.Nutritious.Common.csproj
@@ -6,10 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BHA.ManagementAssistant.Nutritious.Core\BHA.ManagementAssistant.Nutritious.Core.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
   </ItemGroup>
 
 </Project>
