--- a/BHA.ManagementAssistant.Nutritious.Common/BHA.ManagementAssistant.Nutritious.Common.csproj
+++ b/BHA.ManagementAssistant.Nutritious.Common/BHA.ManagementAssistant.Nutritious.Common.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BHA.ManagementAssistant.Nutritious.Core\BHA.ManagementAssistant.Nutritious.Core.csproj" />
+  </ItemGroup>
+
 </Project>
