CurrentUser and EFRepository  Update

--- a/BHA.ManagementAssistant.Nutritious.Common/BHA.ManagementAssistant.Nutritious.Common.csproj
+++ b/BHA.ManagementAssistant.Nutritious.Common/BHA.ManagementAssistant.Nutritious.Common.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\BHA.ManagementAssistant.Nutritious.Core\BHA.ManagementAssistant.Nutritious.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MiddleWare\" />
+  </ItemGroup>
+
 </Project>
